# robot_arm_urdf

./: README.md
3D model/: BASE_JOYSTICK.stl  BODY_JOINT_2.stl  BODY_JOINT_3.stl  CCR10SPRO_DOWN_PLATE_BASE.3mf  CCR10SPRO_LINK_JOINT1.3mf  DOWN_PLATE_BASE.stl  JOYSTICK_UPDATE_L.stl  LINK_JOINT1.stl  LINK_JOINT2_UPDATE.stl  LINK_JOINT3.stl  LINK_JOINT4.stl  LINK_JOINT5_UPDATE.stl  Part1.stl  SKIN_BASE_UPDATE.stl  SKIN_GEARBOX27.stl  TOP_PLATE_BASE.stl  TOP_PLATE_BASE_UPDATE.stl  case gripper.stl  case.stl  pillar_update_1.stl  sw case.stl  test24.stl  test35mm..stl  เเหวนล๊อคน๊อตตัวเมมีย.stl
FreeCAD Model/: Assembly.20241202-151242.FCBak  Assembly.FCStd.3bb00a9e-18ad-412d-ae23-765b15022381  Assembly.FCStd.fd522310-e977-4e14-a295-0826d374795f  Assemblypart joint2.FCStd  BASE_SKIN.20241201-232516.FCBak  BASE_SKIN.FCStd  BODY_JOINT_3.20241203-123445.FCBak  BODY_JOINT_3.FCStd.210945f1-f17b-47a5-a972-3dfccb2406ba  BODY_PART_5.20241203-124113.FCBak  BODY_PART_5.FCStd  Base model.20241201-232027.FCBak  Base model.FCStd  Body joint 2.20241202-170536.FCBak  Body joint 2.FCStd  DOWN_PLATE_BASE.20241202-163118.FCBak  DOWN_PLATE_BASE.FCStd  LINK jont _3.20241203-131016.FCBak  LINK jont _3.FCStd  Link joint 2.20241202-172345.FCBak  Link joint 2.FCStd  Link joint 3.20241203-122126.FCBak  Link joint 3.FCStd  Middle_PLATE_BASE.20241202-001605.FCBak  PART_1.FCStd  (+25 more)
URDF/01_Assmebly/: CMakeLists.txt  package.xml
URDF/01_Assmebly/config/: joint_names_01_Assmebly.yaml
URDF/01_Assmebly/launch/: display.launch  gazebo.launch
URDF/01_Assmebly/urdf/: 01_Assmebly.csv  01_Assmebly.urdf
(+51 files in other folders)
